crates/otter-vm/tests/compile_fail/branded_session_across_await_rejected.stderr
error[E0521]: borrowed data escapes outside of closure
  --> tests/compile_fail/branded_session_across_await_rejected.rs:11:9
   |
10 |       otter_gc::with_gc_session(&mut heap, |session| {
   |                                             -------
   |                                             |
   |                                             `session` is a reference that is only valid in the closure body
   |                                             has type `GcSession<'1, '_>`
11 | /         assert_send_static_future(async move {
12 | |             std::future::pending::<()>().await;
13 | |             std::hint::black_box(session);
14 | |         });
   | |          ^
   | |          |
   | |__________`session` escapes the closure body here
   |            argument requires that `'1` must outlive `'static`
   |
   = note: requirement occurs because of the type `GcSession<'_, '_>`, which makes the generic argument `'_` invariant
   = note: the struct `GcSession<'iso, 'gc>` is invariant over the parameter `'iso`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error[E0521]: borrowed data escapes outside of closure
  --> tests/compile_fail/branded_session_across_await_rejected.rs:11:9
   |
10 |       otter_gc::with_gc_session(&mut heap, |session| {
   |                                             -------
   |                                             |
   |                                             `session` is a reference that is only valid in the closure body
   |                                             has type `GcSession<'_, '2>`
11 | /         assert_send_static_future(async move {
12 | |             std::future::pending::<()>().await;
13 | |             std::hint::black_box(session);
14 | |         });
   | |          ^
   | |          |
   | |__________`session` escapes the closure body here
   |            argument requires that `'2` must outlive `'static`
   |
   = note: requirement occurs because of the type `GcSession<'_, '_>`, which makes the generic argument `'_` invariant
   = note: the struct `GcSession<'iso, 'gc>` is invariant over the parameter `'iso`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error: future cannot be sent between threads safely
  --> tests/compile_fail/branded_session_across_await_rejected.rs:11:9
   |
11 | /         assert_send_static_future(async move {
12 | |             std::future::pending::<()>().await;
13 | |             std::hint::black_box(session);
14 | |         });
   | |__________^ future created by async block is not `Send`
   |
   = help: within `{async block@$DIR/tests/compile_fail/branded_session_across_await_rejected.rs:11:35: 11:45}`, the trait `Send` is not implemented for `*mut GcHeader`
note: captured value is not `Send`
  --> tests/compile_fail/branded_session_across_await_rejected.rs:13:34
   |
13 |             std::hint::black_box(session);
   |                                  ^^^^^^^ has type `GcSession<'_, '_>` which is not `Send`
note: required by a bound in `assert_send_static_future`
  --> tests/compile_fail/branded_session_across_await_rejected.rs:5:43
   |
 3 | fn assert_send_static_future<F>(_future: F)
   |    ------------------------- required by a bound in this function
 4 | where
 5 |     F: std::future::Future<Output = ()> + Send + 'static,
   |                                           ^^^^ required by this bound in `assert_send_static_future`
